# MonetLoaderOSS

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README-ru.md  README.md
cpp/: CMakeLists.txt  aml_stuff.h  bass_manager.cpp  bass_manager.h  clipboard.cpp  clipboard.h  compat.cpp  compat.h  file_manager.cpp  file_manager.h  lib_manager.h  logger.cpp  logger.h  main.cpp  mci.h  offsets.h
cpp/game/: CAEAudioEntity.h  CAEPedAudioEntity.h  CAEPedSpeechAudioEntity.h  CAESound.h  CAETwinLoopSoundEntity.h  CAEVehicleAudioEntity.h  CAEWeaponAudioEntity.h  CAutoPilot.h  CAutomobile.h  CCam.h  CCamera.h  CColPoint.h  CControllerState.h  CCopPed.h  CCutsceneObject.h  CDamageManager.h  CEntity.h  CEntityScanner.h  CHeli.h  CMatrix.h  CMessages.h  CObject.h  CPad.h  CPed.h  CPedIK.h  CPedMisc.h  CPhysical.h  CPlaceable.h  CPlane.h  CPlayerData.h  CPlayerPed.h  CPool.h  CPools.h  CQuaternion.h  CRadar.h  CRect.h  CStoredCollPoly.h  CTouchInterface.h  CVector.h  CVector2D.h  (+23 more)
cpp/gui/: context_switch.h  imrw.cpp  imrw.h  input_system.cpp  input_system.h  keyboard.cpp  keyboard.h  render.cpp  render.h  screen.h  touch_handler.cpp  touch_handler.h
cpp/hook/: backend_flags.h  monethook.cpp  monethook.h
cpp/hook/backend32/: inlineHook.c  inlineHook.h  relocate.c  relocate.h
cpp/hook/backend64/: And64InlineHook.cpp  And64InlineHook.hpp
cpp/script/: luabass.cpp  luabass.h  luafuncs.cpp  luafuncs.h  luajson.cpp  luajson.h  opcodes.cpp  opcodes.h  scheduler.cpp  scheduler.h  script.cpp  script.h  script_manager.cpp  script_manager.h  thread.cpp  thread.h
cpp/script/modules/: lbase64.c  lbase64.h  lfs.c  lfs.h  memory.cpp  memory.h  monethook.cpp
cpp/script/modules/cjson/: lua_cjson.c  lua_cjson.h
cpp/script/modules/effil/: channel.cpp  channel.h  garbage-collector.cpp  garbage-collector.h  lua-helpers.cpp  lua-helpers.h  lua-module.cpp  lua-module.h  lua-typename.h  notifier.h  shared-table.cpp  shared-table.h  stored-object.cpp  stored-object.h  this-thread.cpp  this-thread.h  thread-handle.cpp  thread-handle.h  thread-runner.cpp  thread-runner.h  thread.cpp  thread.h  utils.h
cpp/script/modules/luasec/: api.h  compat.h  config.c  context.c  ec.c  options.c  ssl.c  ssl.h  x509.c
cpp/script/modules/luasocket/: auxiliar.c  except.c  inet.c  luasocket.c  luasocket.h  mime.c  mime.h  select.c  serial.h  socket.h  tcp.c  timeout.c  udp.c  unix.h  unixdgram.c  unixstream.c  usocket.c  wsocket.c
cpp/script/modules/mimgui/: cimgui.cpp  cimgui.h  renderer.cpp  renderer.h
cpp/utils/: InputSystem.dex.inl  android.cpp  android.h  callback.h  random.cpp  random.h  str.cpp  str.h
example/: 2.2.0 Demo.lua  2.3.0 Demo.lua  AirBrake.lua  CoordMaster.lua  FFI Bone WallHack.lua  FlyCar.lua  FuckConnectionScreen.lua  ImGui Indev.lua  JetPack.lua  LuaShell.lua  MultiCheat.lua  RakLogger.lua  Reconnect.lua  ReloadAll.lua  Script Manager clipper test.lua  Script Manager.lua  WallHack.lua  WaterMark.lua
lib/: CMakeLists.txt  bass.h  encoding.h
lib/imgui/: imgui.h  imgui_internal.h  imgui_widgets.cpp
lib/imgui_fonts/: arial_bold.cpp  arial_bold.h
lib/libressl/: configure
lib/libressl/crypto/: Makefile.in
lib/libressl/tests/: Makefile.in
lib/lua/: luajit.h
lib/sol/: config.hpp  sol.hpp
